{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 282,
  "lineage": "aa28f535-1c67-4b46-07d6-10ac1ac1c4cb",
  "resources": [
    {
      "module": "module.ssm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_for_operation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3fd0f5d33134a76",
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:instance/i-0331fbe047ae2519e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-for-ssm",
            "id": "i-0331fbe047ae2519e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07677a6c6a0f0f2e2",
            "private_dns": "ip-10-0-65-222.ap-northeast-1.compute.internal",
            "private_ip": "10.0.65.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09358d52e5e3882bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a51f28c36429d016",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df7ca7b82227ab48"
            ]
          },
          "dependencies": [
            "module.ssm.aws_iam_instance_profile.ec2_for_ssm",
            "module.ssm.module.ec2_for_ssm_role.aws_iam_role.default",
            "module.ssm.module.ec2_for_ssm_role.data.aws_iam_policy_document.assume_role",
            "module.ssm.module.vpc.aws_subnet.private_0",
            "module.ssm.module.vpc.aws_subnet.private_1",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4bc335edb13777a",
            "association_id": "eipassoc-0e85abe533538802c",
            "domain": "vpc",
            "id": "eipalloc-0b4bc335edb13777a",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e24354dc5ca0b3c1",
            "private_dns": "ip-10-0-1-249.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.249",
            "public_dns": "ec2-54-168-182-142.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.168.182.142",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_internet_gateway.example",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09422e97060f24a81",
            "association_id": "eipassoc-07361216c5cf051f7",
            "domain": "vpc",
            "id": "eipalloc-09422e97060f24a81",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0a9f077de928314cd",
            "private_dns": "ip-10-0-2-253.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.253",
            "public_dns": "ec2-35-76-46-237.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.76.46.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_internet_gateway.example",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:internet-gateway/igw-0e3a42c0c526f20b8",
            "id": "igw-0e3a42c0c526f20b8",
            "owner_id": "871011054125",
            "vpc_id": "vpc-02a0ddaa24082eacb"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4bc335edb13777a",
            "connectivity_type": "public",
            "id": "nat-0893108fdc1e4a89f",
            "network_interface_id": "eni-0e24354dc5ca0b3c1",
            "private_ip": "10.0.1.249",
            "public_ip": "54.168.182.142",
            "subnet_id": "subnet-0f429c3107ee75643"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_eip.nat_gateway_0",
            "module.ssm.module.vpc.aws_internet_gateway.example",
            "module.ssm.module.vpc.aws_subnet.public_0",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09422e97060f24a81",
            "connectivity_type": "public",
            "id": "nat-0608edd7f83dca89b",
            "network_interface_id": "eni-0a9f077de928314cd",
            "private_ip": "10.0.2.253",
            "public_ip": "35.76.46.237",
            "subnet_id": "subnet-0c1556e811e87fa1d"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_eip.nat_gateway_1",
            "module.ssm.module.vpc.aws_internet_gateway.example",
            "module.ssm.module.vpc.aws_subnet.public_1",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09cb265181ed477fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0893108fdc1e4a89f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09cb265181ed477fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssm.module.vpc.aws_eip.nat_gateway_0",
            "module.ssm.module.vpc.aws_internet_gateway.example",
            "module.ssm.module.vpc.aws_nat_gateway.nat_gateway_0",
            "module.ssm.module.vpc.aws_route_table.private_0",
            "module.ssm.module.vpc.aws_subnet.public_0",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02710296bc398e71a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0608edd7f83dca89b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02710296bc398e71a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssm.module.vpc.aws_eip.nat_gateway_1",
            "module.ssm.module.vpc.aws_internet_gateway.example",
            "module.ssm.module.vpc.aws_nat_gateway.nat_gateway_1",
            "module.ssm.module.vpc.aws_route_table.private_1",
            "module.ssm.module.vpc.aws_subnet.public_1",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e3a42c0c526f20b8",
            "id": "r-rtb-0f791ceb3c1d6f9ea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f791ceb3c1d6f9ea",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssm.module.vpc.aws_internet_gateway.example",
            "module.ssm.module.vpc.aws_route_table.public",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:route-table/rtb-09cb265181ed477fe",
            "id": "rtb-09cb265181ed477fe",
            "owner_id": "871011054125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0893108fdc1e4a89f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02a0ddaa24082eacb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:route-table/rtb-02710296bc398e71a",
            "id": "rtb-02710296bc398e71a",
            "owner_id": "871011054125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0608edd7f83dca89b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02a0ddaa24082eacb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:route-table/rtb-0f791ceb3c1d6f9ea",
            "id": "rtb-0f791ceb3c1d6f9ea",
            "owner_id": "871011054125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3a42c0c526f20b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02a0ddaa24082eacb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2709f812c813ffc",
            "route_table_id": "rtb-09cb265181ed477fe",
            "subnet_id": "subnet-0a51f28c36429d016"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_route_table.private_0",
            "module.ssm.module.vpc.aws_subnet.private_0",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b7a96f02eb1ccb",
            "route_table_id": "rtb-02710296bc398e71a",
            "subnet_id": "subnet-00fc8db113880fc47"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_route_table.private_1",
            "module.ssm.module.vpc.aws_subnet.private_1",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022e07b44323b4579",
            "route_table_id": "rtb-0f791ceb3c1d6f9ea",
            "subnet_id": "subnet-0f429c3107ee75643"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_route_table.public",
            "module.ssm.module.vpc.aws_subnet.public_0",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5e847ff8fd67865",
            "route_table_id": "rtb-0f791ceb3c1d6f9ea",
            "subnet_id": "subnet-0c1556e811e87fa1d"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_route_table.public",
            "module.ssm.module.vpc.aws_subnet.public_1",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:security-group/sg-0aba63760ccab570d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aba63760ccab570d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example",
            "name_prefix": "",
            "owner_id": "871011054125",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02a0ddaa24082eacb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "exress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-483304144",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0aba63760ccab570d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssm.module.vpc.aws_security_group.example",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2736321831",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aba63760ccab570d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssm.module.vpc.aws_security_group.example",
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:subnet/subnet-0a51f28c36429d016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a51f28c36429d016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871011054125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02a0ddaa24082eacb"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:subnet/subnet-00fc8db113880fc47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fc8db113880fc47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871011054125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02a0ddaa24082eacb"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:subnet/subnet-0f429c3107ee75643",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f429c3107ee75643",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "871011054125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02a0ddaa24082eacb"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:subnet/subnet-0c1556e811e87fa1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1556e811e87fa1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "871011054125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02a0ddaa24082eacb"
          },
          "dependencies": [
            "module.ssm.module.vpc.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "module": "module.ssm.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:871011054125:vpc/vpc-02a0ddaa24082eacb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08af61aeacf50021a",
            "default_route_table_id": "rtb-0bded419c6cdabed4",
            "default_security_group_id": "sg-0df7ca7b82227ab48",
            "dhcp_options_id": "dopt-31391a56",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02a0ddaa24082eacb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bded419c6cdabed4",
            "owner_id": "871011054125",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          }
        }
      ]
    }
  ]
}